<resources>
    <string name="app_name">Scroll for Reddit</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_get_more_posts">Get More Posts</string>
    <string name="action_get_more_comments">Get More Comments</string>
    <string name="action_comment">Post Comment</string>
    <string name="action_submit_post">Submit Post</string>
    <string name="action_reply">Reply</string>

    <string name="imageview1">Image Viewer</string>
    <string name="comment_body">comment body</string>
    <string name="comment_author">author</string>
    <string name="comment_points">1 points</string>
    <string name="post_title">post title</string>
    <string name="post_subreddit">subreddit name</string>
    <string name="post_author">author</string>
    <string name="post_source">source</string>
    <string name="post_points">1 points</string>
    <string name="post_number_of_comments">1 comments</string>

    <string name="widget_title">title</string>
    <string name="widget_source">source</string>
    <string name="widget_subreddit">subreddit</string>
    <string name="widget_author">author</string>
    <string name="widget_score">score</string>
    <string name="widget_number_of_comments">1 comments</string>

    <string name="nav_header_text">Scroll for Reddit</string>

    <string name="nav_item_login">Login</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_subreddits">Change Subreddit</string>
    <string name="nav_item_frontpage">Frontpage</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_manage_subreddits">Edit Subreddits</string>

    <string name="post_header_imageview">Header Imageview</string>
    <string name="list_row_imageview">Thumbnail Imageview</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="posts_adapter_points">%1$d points</string>
    <string name="posts_adapter_comments">%1$d comments</string>

    <string name="add_post_edit_text_hint">Submission text</string>
    <string name="add_post_title_edit_text_hint">Submission title</string>
    <string name="captcha_edit_text_hint">Enter captcha</string>

    <string name="nav_menu_title_userless">Scroll for Reddit (Not Logged In)</string>
    <string name="nav_menu_title_logged_in">Scroll for Reddit (Logged In)</string>

    <string name="item_post_imageview">Submission Thumbnail Image</string>

    <string name="subreddit_checkbox">Subscribe to Subreddit</string>
    <string name="captcha_imageview">Captcha Image</string>


</resources>
