<?xml version="1.0" encoding="utf-8"?>
<!-- widget xml layout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/list_row_imageview"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/thumbnail"
        android:singleLine="true"
        android:textSize="14sp"
        android:text="@string/widget_title"/>

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="5dip"
        android:layout_toEndOf="@id/thumbnail"
        android:textSize="14sp"
        android:text="@string/widget_source"/>

    <TextView
        android:id="@+id/subreddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_below="@id/source"
        android:layout_toEndOf="@id/thumbnail"
        android:textSize="14sp"
        android:text="@string/widget_subreddit"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginStart="5dip"
        android:layout_below="@id/source"
        android:layout_toEndOf="@id/subreddit"
        android:textSize="14sp"
        android:text="@string/widget_author"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_below="@id/subreddit"
        android:layout_toEndOf="@id/thumbnail"
        android:textSize="14sp"
        android:text="@string/widget_score"/>

    <TextView
        android:id="@+id/numberOfComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginStart="5dip"
        android:layout_below="@id/subreddit"
        android:layout_toEndOf="@id/score"
        android:textSize="14sp"
        android:text="@string/widget_number_of_comments"/>

</RelativeLayout>