<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_get_more_posts"
        android:icon="@drawable/ic_arrow_downward_white_24dp"
        android:title="@string/action_get_more_posts"
        android:orderInCategory="99"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_submit_post"
        android:icon="@drawable/ic_reply_white_24dp"
        android:title="@string/action_submit_post"
        android:orderInCategory="98"
        app:showAsAction="ifRoom"
        />

</menu>