<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comments_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/comment_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_body"
            android:layout_below="@+id/comment_points"
            />

        <TextView
            android:id="@+id/comment_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/comment_body"
            android:text="@string/comment_author" />

        <TextView
            android:id="@+id/comment_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/comment_author"
            android:layout_marginStart="10dp"
            android:text="@string/comment_points" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/comments_toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/comment_body"
            android:visibility="gone">


        </android.support.v7.widget.Toolbar>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</android.support.v7.widget.CardView>